// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter renders correctly 1`] = `
<DocumentFragment>
  <div
    class="c-counter u-super u-text--mono"
    data-name="counter"
  >
    <span
      class="c-counter__amount"
    >
      100
    </span>
  </div>
</DocumentFragment>
`;

exports[`Counter renders correctly with prefix and suffix 1`] = `
<DocumentFragment>
  <div
    class="c-counter u-super u-text--mono"
    data-name="counter"
  >
    <span
      class="c-counter__prefix"
    >
      £
    </span>
    <span
      class="c-counter__amount"
    >
      100
    </span>
    <span
      class="c-counter__suffix u-text--quiet u-xsmall"
    >
       lorem
    </span>
  </div>
</DocumentFragment>
`;
